# Music_Editor_AI

./: README.md  pyproject.toml
src/music_editor_ai/: __init__.py  chords.py  cli.py  composer.py  melody.py  scales.py
tests/: test_composer.py  test_scales.py
